horizontal scroll issue fixed

--- a/src/assets/styles/styles.less
+++ b/src/assets/styles/styles.less
@@ -37,7 +37,6 @@ body {
 
 * {
   box-sizing: border-box !important;
-  touch-action: pan-y;
   font-family: var(--font-family) !important;
 }
 
@@ -109,7 +108,7 @@ body {
   color: var(--teddy-color-disable);
 }
 
-.ant-btn.ant-btn-lg:hover{
+.ant-btn.ant-btn-lg:hover {
   background-color: var(--teddy-primary-color-hover);
 }
 
@@ -138,10 +137,10 @@ button {
 
 .ant-btn.ant-btn-primary {
   background: var(--teddy-box-color-dark) !important;
- &:hover {
-  background-color: var(--teddy-primary-color-hover) !important;
-  color: var(--spectrum-primary-text) !important;
- }
+  &:hover {
+    background-color: var(--teddy-primary-color-hover) !important;
+    color: var(--spectrum-primary-text) !important;
+  }
 }
 
 .ant-dropdown-open {
